trying to make things undelete

--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -1,8 +1,8 @@
 .todoli {
-  /* display: flex;
-  justify-content: center; */
-  /* align-items: center; */
+  display: flex;
+  justify-content: center;
   background-color: grey;
+  border-color: grey;
 }
 
 .tododiv {
