--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -1,12 +1,21 @@
 .todoli {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  margin-left: 40%;
+  width: 100px;
+  align-items: center;
   background-color: grey;
   border-color: grey;
 }
 
 .tododiv {
   text-align: center;
+}
+
+.todoContent {
+  margin-left: 25px;
+  margin-top: 16px;
 }
 
 ul {
