--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -1,8 +1,7 @@
 .todoli {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  margin-left: 40%;
+  /* grid-template-rows: 1fr; */
   width: 100px;
   align-items: center;
   background-color: grey;
@@ -11,11 +10,13 @@
 
 .tododiv {
   text-align: center;
+  margin-left: 40%;
+  margin-right: 40%;
 }
 
 .todoContent {
-  margin-left: 25px;
-  margin-top: 16px;
+  margin-left: 20px;
+  margin-top: 17px;
 }
 
 ul {
@@ -24,6 +25,18 @@ ul {
 
 .addTodo {
   display: flex;
-  margin-left: 500px;
-  margin-right: 500px;
+  margin-left: 26%;
+  margin-right: 26%;
+}
+
+@media (max-width: 500px) {
+  .addTodo {
+    display: block;
+    align-items: center;
+  }
+
+  .addTodoButton {
+    margin-left: 40%;
+    margin-top: 10%;
+  }
 }
